--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
           <div class="nav-contact">
             <a href="mailto:info@devstudio.com" class="adress-color">
               <svg class="icon-contacts" width="16" height="12">
-                <use href="./img/sprite.svg#icon-envelope"></use>
+                <use href="./img/sprite/sprite.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
             >
             <a href="tel:+380961111111" class="adress-color">
               <svg class="icon-contacts" width="10" height="16">
-                <use href="./img/sprite.svg#icon-smartphone"></use>
+                <use href="./img/sprite/sprite.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
             >
@@ -77,7 +77,7 @@
           <ul class="list-bar">
             <li class="list-description">
               <svg class="icon" width="70" height="70">
-                <use href="./img/sprite.svg#icon-antenna-1"></use>
+                <use href="./img/sprite/sprite.svg#icon-antenna-1"></use>
               </svg>
               <h4 class="subtitle">Внимание к деталям</h4>
               <p class="first-description">
@@ -87,7 +87,7 @@
             </li>
             <li class="list-description">
               <svg class="icon" width="70" height="70">
-                <use href="./img/sprite.svg#icon-clock-1"></use>
+                <use href="./img/sprite/sprite.svg#icon-clock-1"></use>
               </svg>
               <h4 class="subtitle">Пунктуальность</h4>
               <p class="first-description">
@@ -97,7 +97,7 @@
             </li>
             <li class="list-description">
               <svg class="icon" width="70" height="70">
-                <use href="./img/sprite.svg#icon-diagram-1"></use>
+                <use href="./img/sprite/sprite.svg#icon-diagram-1"></use>
               </svg>
               <h4 class="subtitle">Планирование</h4>
               <p class="first-description">
@@ -107,7 +107,7 @@
             </li>
             <li class="list-description">
               <svg class="icon" width="70" height="70">
-                <use href="./img/sprite.svg#icon-astronaut-1"></use>
+                <use href="./img/sprite/sprite.svg#icon-astronaut-1"></use>
               </svg>
               <h4 class="subtitle">Современные технологии</h4>
               <p class="first-description">
@@ -128,7 +128,7 @@
             <li class="list-images">
               <img
                 class="photo"
-                src="./img/activity-img1.jpg"
+                src="./img/activity/activity1-img1x.jpg"
                 alt="верстка сайта"
                 width="370"
                 height="294"
@@ -138,7 +138,7 @@
             <li class="list-images">
               <img
                 class="photo"
-                src="./img/activity-img2.jpg"
+                src="./img/activity/activity2-img1x.jpg"
                 alt="дизайн приложения на мобильном устройстве"
                 width="370"
                 height="294"
@@ -148,7 +148,7 @@
             <li class="list-images">
               <img
                 class="photo"
-                src="./img/activity-img3.jpg"
+                src="./img/activity/activity3-img1x.jpg"
                 alt="тестирование приложения"
                 width="370"
                 height="294"
@@ -168,7 +168,7 @@
             <li class="team-photo">
               <img
                 class="photo"
-                src="./img/team-img1.jpg"
+                src="./img/team/team1-img1x.jpg"
                 alt="Игорь Демьяненко"
                 width="270"
                 height="260"
@@ -180,28 +180,36 @@
                   <li class="icons-bar">
                     <a href="#" class="icon-links">
                       <svg class="social-icons" width="20" height="20">
-                        <use href="./img/sprite.svg#icon-instagram-2"></use>
+                        <use
+                          href="./img/sprite/sprite.svg#icon-instagram-2"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icons-bar">
                     <a href="#" class="icon-links">
                       <svg class="social-icons" width="20" height="20">
-                        <use href="./img/sprite.svg#icon-twitter-1"></use>
+                        <use
+                          href="./img/sprite/sprite.svg#icon-twitter-1"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icons-bar">
                     <a href="#" class="icon-links">
                       <svg class="social-icons" width="20" height="20">
-                        <use href="./img/sprite.svg#icon-facebook-1"></use>
+                        <use
+                          href="./img/sprite/sprite.svg#icon-facebook-1"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icons-bar">
                     <a href="#" class="icon-links">
                       <svg class="social-icons" width="20" height="20">
-                        <use href="./img/sprite.svg#icon-linkedin-1"></use>
+                        <use
+                          href="./img/sprite/sprite.svg#icon-linkedin-1"
+                        ></use>
                       </svg>
                     </a>
                   </li>
@@ -211,7 +219,7 @@
             <li class="team-photo">
               <img
                 class="photo"
-                src="./img/team-img2.jpg"
+                src="./img/team/team2-img1x.jpg"
                 alt="Ольга Репина"
                 width="270"
                 height="260"
@@ -223,28 +231,36 @@
                   <li class="icons-bar">
                     <a href="#" class="icon-links">
                       <svg class="social-icons" width="20" height="20">
-                        <use href="./img/sprite.svg#icon-instagram-2"></use>
+                        <use
+                          href="./img/sprite/sprite.svg#icon-instagram-2"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icons-bar">
                     <a href="#" class="icon-links">
                       <svg class="social-icons" width="20" height="20">
-                        <use href="./img/sprite.svg#icon-twitter-1"></use>
+                        <use
+                          href="./img/sprite/sprite.svg#icon-twitter-1"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icons-bar">
                     <a href="#" class="icon-links">
                       <svg class="social-icons" width="20" height="20">
-                        <use href="./img/sprite.svg#icon-facebook-1"></use>
+                        <use
+                          href="./img/sprite/sprite.svg#icon-facebook-1"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icons-bar">
                     <a href="#" class="icon-links">
                       <svg class="social-icons" width="20" height="20">
-                        <use href="./img/sprite.svg#icon-linkedin-1"></use>
+                        <use
+                          href="./img/sprite/sprite.svg#icon-linkedin-1"
+                        ></use>
                       </svg>
                     </a>
                   </li>
@@ -254,7 +270,7 @@
             <li class="team-photo">
               <img
                 class="photo"
-                src="./img/team-img3.jpg"
+                src="./img/team/team3-img1x.jpg"
                 alt="Николай Тарасов"
                 width="270"
                 height="260"
@@ -266,28 +282,36 @@
                   <li class="icons-bar">
                     <a href="#" class="icon-links">
                       <svg class="social-icons" width="20" height="20">
-                        <use href="./img/sprite.svg#icon-instagram-2"></use>
+                        <use
+                          href="./img/sprite/sprite.svg#icon-instagram-2"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icons-bar">
                     <a href="#" class="icon-links">
                       <svg class="social-icons" width="20" height="20">
-                        <use href="./img/sprite.svg#icon-twitter-1"></use>
+                        <use
+                          href="./img/sprite/sprite.svg#icon-twitter-1"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icons-bar">
                     <a href="#" class="icon-links">
                       <svg class="social-icons" width="20" height="20">
-                        <use href="./img/sprite.svg#icon-facebook-1"></use>
+                        <use
+                          href="./img/sprite/sprite.svg#icon-facebook-1"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icons-bar">
                     <a href="#" class="icon-links">
                       <svg class="social-icons" width="20" height="20">
-                        <use href="./img/sprite.svg#icon-linkedin-1"></use>
+                        <use
+                          href="./img/sprite/sprite.svg#icon-linkedin-1"
+                        ></use>
                       </svg>
                     </a>
                   </li>
@@ -297,7 +321,7 @@
             <li class="team-photo">
               <img
                 class="photo"
-                src="./img/team-img4.jpg"
+                src="./img/team/team4-img1x.jpg"
                 alt="Михаил Ермаков"
                 width="270"
                 height="260"
@@ -309,28 +333,36 @@
                   <li class="icons-bar">
                     <a href="#" class="icon-links">
                       <svg class="social-icons" width="20" height="20">
-                        <use href="./img/sprite.svg#icon-instagram-2"></use>
+                        <use
+                          href="./img/sprite/sprite.svg#icon-instagram-2"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icons-bar">
                     <a href="#" class="icon-links">
                       <svg class="social-icons" width="20" height="20">
-                        <use href="./img/sprite.svg#icon-twitter-1"></use>
+                        <use
+                          href="./img/sprite/sprite.svg#icon-twitter-1"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icons-bar">
                     <a href="#" class="icon-links">
                       <svg class="social-icons" width="20" height="20">
-                        <use href="./img/sprite.svg#icon-facebook-1"></use>
+                        <use
+                          href="./img/sprite/sprite.svg#icon-facebook-1"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icons-bar">
                     <a href="#" class="icon-links">
                       <svg class="social-icons" width="20" height="20">
-                        <use href="./img/sprite.svg#icon-linkedin-1"></use>
+                        <use
+                          href="./img/sprite/sprite.svg#icon-linkedin-1"
+                        ></use>
                       </svg>
                     </a>
                   </li>
@@ -350,39 +382,39 @@
             <li class="clients-logo">
               <a href="#" class="regular-clients">
                 <svg class="icon-logo" width="44" height="49">
-                  <use href="./img/sprite.svg#icon-logo-1"></use></svg
+                  <use href="./img/sprite/sprite.svg#icon-logo-1"></use></svg
               ></a>
             </li>
             <li class="clients-logo">
               <a href="#" class="regular-clients">
                 <svg class="icon-logo" width="40" height="52">
-                  <use href="./img/sprite.svg#icon-logo-2"></use></svg
+                  <use href="./img/sprite/sprite.svg#icon-logo-2"></use></svg
               ></a>
             </li>
             <li class="clients-logo">
               <a href="#" class="regular-clients">
                 <svg class="icon-logo" width="41" height="43">
-                  <use href="./img/sprite.svg#icon-logo-3"></use></svg
+                  <use href="./img/sprite/sprite.svg#icon-logo-3"></use></svg
               ></a>
             </li>
             <li class="clients-logo">
               <a href="#" class="regular-clients">
                 <svg class="icon-logo" width="80" height="42">
-                  <use href="./img/sprite.svg#icon-logo-4"></use>
+                  <use href="./img/sprite/sprite.svg#icon-logo-4"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-logo">
               <a href="#" class="regular-clients">
                 <svg class="icon-logo" width="59" height="47">
-                  <use href="./img/sprite.svg#icon-logo-5"></use>
+                  <use href="./img/sprite/sprite.svg#icon-logo-5"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-logo">
               <a href="#" class="regular-clients">
                 <svg class="icon-logo" width="88" height="45">
-                  <use href="./img/sprite.svg#icon-logo-6"></use>
+                  <use href="./img/sprite/sprite.svg#icon-logo-6"></use>
                 </svg>
               </a>
             </li>
@@ -417,28 +449,28 @@
               <li class="icons-bar icon-color">
                 <a href="#" class="footer-links">
                   <svg class="social-icons icon-fill" width="20" height="20">
-                    <use href="./img/sprite.svg#icon-instagram-2"></use>
+                    <use href="./img/sprite/sprite.svg#icon-instagram-2"></use>
                   </svg>
                 </a>
               </li>
               <li class="icons-bar icon-color">
                 <a href="#" class="footer-links">
                   <svg class="social-icons icon-fill" width="20" height="20">
-                    <use href="./img/sprite.svg#icon-twitter-1"></use>
+                    <use href="./img/sprite/sprite.svg#icon-twitter-1"></use>
                   </svg>
                 </a>
               </li>
               <li class="icons-bar icon-color">
                 <a href="#" class="footer-links">
                   <svg class="social-icons icon-fill" width="20" height="20">
-                    <use href="./img/sprite.svg#icon-facebook-1"></use>
+                    <use href="./img/sprite/sprite.svg#icon-facebook-1"></use>
                   </svg>
                 </a>
               </li>
               <li class="icons-bar icon-color">
                 <a href="#" class="footer-links">
                   <svg class="social-icons icon-fill" width="20" height="20">
-                    <use href="./img/sprite.svg#icon-linkedin-1"></use>
+                    <use href="./img/sprite/sprite.svg#icon-linkedin-1"></use>
                   </svg>
                 </a>
               </li>
@@ -460,7 +492,7 @@
             <button type="submit" class="contact-button">
               <span class="button-text">Подписаться</span>
               <svg class="icon-send">
-                <use href="./img/icons.svg#icon-icon-send"></use>
+                <use href="./img/sprite/icons.svg#icon-icon-send"></use>
               </svg>
             </button>
           </form>
@@ -474,7 +506,7 @@
       <div class="modal">
         <button class="modal-button" data-modal-close>
           <svg class="x-button" width="11" height="11">
-            <use href="./img/sprite.svg#icon-x-1"></use>
+            <use href="./img/sprite/sprite.svg#icon-x-1"></use>
           </svg>
         </button>
         <p class="form-title">Оставьте свои данные, мы вам перезвоним</p>
@@ -484,7 +516,9 @@
               <label for="name" class="modal-label">Имя</label>
               <div class="icon-data">
                 <svg class="data-icon" width="18" height="18">
-                  <use href="./img/icons.svg#icon-person-black-18dp-1"></use>
+                  <use
+                    href="./img/sprite/icons.svg#icon-person-black-18dp-1"
+                  ></use>
                 </svg>
               </div>
               <input type="text" class="modal-input" id="name" placeholder="" />
@@ -493,7 +527,9 @@
               <label for="tel" class="modal-label">Телефон</label>
               <div class="icon-data">
                 <svg class="data-icon" width="18" height="18">
-                  <use href="./img/icons.svg#icon-phone-black-18dp-1"></use>
+                  <use
+                    href="./img/sprite/icons.svg#icon-phone-black-18dp-1"
+                  ></use>
                 </svg>
               </div>
               <input type="tel" class="modal-input" id="tel" placeholder="" />
@@ -503,7 +539,9 @@
               <input type="email" class="modal-input" id="email" />
               <div class="icon-data">
                 <svg class="data-icon" width="18" height="18">
-                  <use href="./img/icons.svg#icon-email-black-18dp-1"></use>
+                  <use
+                    href="./img/sprite/icons.svg#icon-email-black-18dp-1"
+                  ></use>
                 </svg>
               </div>
             </li>
