--- a/portfolio.html
+++ b/portfolio.html
@@ -41,13 +41,13 @@
           <div class="nav-contact">
             <a href="mailto:info@devstudio.com" class="adress-color">
               <svg class="icon-contacts" width="16" height="12">
-                <use href="./img/sprite.svg#icon-envelope"></use>
+                <use href="./img/sprite/sprite.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
             >
             <a href="tel:+380961111111" class="adress-color">
               <svg class="icon-contacts" width="10" height="16">
-                <use href="./img/sprite.svg#icon-smartphone"></use>
+                <use href="./img/sprite/sprite.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
             >
@@ -88,7 +88,7 @@
                 <div class="thumb">
                   <img
                     class="photo"
-                    src="./img/img-portfolio-1.jpg"
+                    src="./img/portfolio/img1-portfolio1x.jpg"
                     alt="веб страница"
                   />
                   <div class="product-overlay">
@@ -111,7 +111,7 @@
                 <div class="thumb">
                   <img
                     class="photo"
-                    src="./img/img-portfolio-2.jpg"
+                    src="./img/portfolio/img2-portfolio1x.jpg"
                     alt="игра в баскетбол"
                   />
                   <div class="product-overlay">
@@ -134,7 +134,7 @@
                 <div class="thumb">
                   <img
                     class="photo"
-                    src="./img/img-portfolio-3.jpg"
+                    src="./img/portfolio/img3-portfolio1x.jpg"
                     alt="ресторан морепродуктов"
                   />
                   <div class="product-overlay">
@@ -157,7 +157,7 @@
                 <div class="thumb">
                   <img
                     class="photo"
-                    src="img/img-portfolio-4.jpg"
+                    src="img/portfolio/img4-portfolio1x.jpg"
                     alt="наушники"
                   />
                   <div class="product-overlay">
@@ -180,7 +180,7 @@
                 <div class="thumb">
                   <img
                     class="photo"
-                    src="./img/img-portfolio-5.jpg"
+                    src="./img/portfolio/img5-portfolio1x.jpg"
                     alt="коробки"
                   />
                   <div class="product-overlay">
@@ -203,7 +203,7 @@
                 <div class="thumb">
                   <img
                     class="photo"
-                    src="./img/img-portfolio-6.jpg"
+                    src="./img/portfolio/img6-portfolio1x.jpg"
                     alt="компьютер"
                   />
                   <div class="product-overlay">
@@ -226,7 +226,7 @@
                 <div class="thumb">
                   <img
                     class="photo"
-                    src="./img/img-portfolio-7.jpg"
+                    src="./img/portfolio/img7-portfolio1x.jpg"
                     alt="журнал"
                   />
                   <div class="product-overlay">
@@ -249,7 +249,7 @@
                 <div class="thumb">
                   <img
                     class="photo"
-                    src="./img/img-portfolio-8.jpg"
+                    src="./img/portfolio/img8-portfolio1x.jpg"
                     alt="проект"
                   />
                   <div class="product-overlay">
@@ -272,7 +272,7 @@
                 <div class="thumb">
                   <img
                     class="photo"
-                    src="./img/img-portfolio-9.jpg"
+                    src="./img/portfolio/img9-portfolio1x.jpg"
                     alt="работа на компьютере"
                   />
                   <div class="product-overlay">
@@ -321,28 +321,28 @@
               <li class="icons-bar icon-color">
                 <a href="#" class="footer-links">
                   <svg class="social-icons icon-fill" width="20" height="20">
-                    <use href="./img/sprite.svg#icon-instagram-2"></use>
+                    <use href="./img/sprite/sprite.svg#icon-instagram-2"></use>
                   </svg>
                 </a>
               </li>
               <li class="icons-bar icon-color">
                 <a href="#" class="footer-links">
                   <svg class="social-icons icon-fill" width="20" height="20">
-                    <use href="./img/sprite.svg#icon-twitter-1"></use>
+                    <use href="./img/sprite/sprite.svg#icon-twitter-1"></use>
                   </svg>
                 </a>
               </li>
               <li class="icons-bar icon-color">
                 <a href="#" class="footer-links">
                   <svg class="social-icons icon-fill" width="20" height="20">
-                    <use href="./img/sprite.svg#icon-facebook-1"></use>
+                    <use href="./img/sprite/sprite.svg#icon-facebook-1"></use>
                   </svg>
                 </a>
               </li>
               <li class="icons-bar icon-color">
                 <a href="#" class="footer-links">
                   <svg class="social-icons icon-fill" width="20" height="20">
-                    <use href="./img/sprite.svg#icon-linkedin-1"></use>
+                    <use href="./img/sprite/sprite.svg#icon-linkedin-1"></use>
                   </svg>
                 </a>
               </li>
@@ -364,7 +364,7 @@
             <button type="submit" class="contact-button">
               <span class="button-text">Подписаться</span>
               <svg class="icon-send">
-                <use href="./img/icons.svg#icon-icon-send"></use>
+                <use href="./img/sprite/icons.svg#icon-icon-send"></use>
               </svg>
             </button>
           </form>
