--- a/index.html
+++ b/index.html
@@ -425,7 +425,8 @@
     </main>
 
     <!-- Контакты -->
-    <footer class="contacts">ssss
+    <footer class="contacts">
+      ssss
       <section class="container padding-contacts">
         <div class="box-container">
           <div>
