--- a/index.html
+++ b/index.html
@@ -426,10 +426,9 @@
 
     <!-- Контакты -->
     <footer class="contacts">
-      ssss
       <section class="container padding-contacts">
         <div class="box-container">
-          <div>
+          <div class="contacts-list">
             <p lang="en" class="Webstudio logo">
               <span class="web">Web</span
               ><span class="studio-white">Studio</span>
