portfolio mobile done

--- a/portfolio.html
+++ b/portfolio.html
@@ -101,7 +101,7 @@
                   </div>
                 </div>
                 <div class="site-bar">
-                  <h4 class="title-bar">Технокряк</h4>
+                  <h4 class="subtitle-bar">Технокряк</h4>
                   <p class="description-bar">Веб-сайт</p>
                 </div>
               </a>
@@ -124,7 +124,7 @@
                   </div>
                 </div>
                 <div class="site-bar">
-                  <h4 class="title-bar">Постер New Orlean vs Golden Star</h4>
+                  <h4 class="subtitle-bar">Постер New Orlean vs Golden Star</h4>
                   <p class="description-bar">Дизайн</p>
                 </div>
               </a>
@@ -147,7 +147,7 @@
                   </div>
                 </div>
                 <div class="site-bar">
-                  <h4 class="title-bar">Ресторан Seafood</h4>
+                  <h4 class="subtitle-bar">Ресторан Seafood</h4>
                   <p class="description-bar">Приложение</p>
                 </div>
               </a>
@@ -170,7 +170,7 @@
                   </div>
                 </div>
                 <div class="site-bar">
-                  <h4 class="title-bar">Проект Prime</h4>
+                  <h4 class="subtitle-bar">Проект Prime</h4>
                   <p class="description-bar">Маркетинг</p>
                 </div>
               </a>
@@ -193,7 +193,7 @@
                   </div>
                 </div>
                 <div class="site-bar">
-                  <h4 class="title-bar">Проект Boxes</h4>
+                  <h4 class="subtitle-bar">Проект Boxes</h4>
                   <p class="description-bar">Приложение</p>
                 </div>
               </a>
@@ -216,7 +216,7 @@
                   </div>
                 </div>
                 <div class="site-bar">
-                  <h4 class="title-bar">Inspiration has no Borders</h4>
+                  <h4 class="subtitle-bar">Inspiration has no Borders</h4>
                   <p class="description-bar">Веб-сайт</p>
                 </div>
               </a>
@@ -239,7 +239,7 @@
                   </div>
                 </div>
                 <div class="site-bar">
-                  <h4 class="title-bar">Издание Limited Edition</h4>
+                  <h4 class="subtitle-bar">Издание Limited Edition</h4>
                   <p class="description-bar">Дизайн</p>
                 </div>
               </a>
@@ -262,7 +262,7 @@
                   </div>
                 </div>
                 <div class="site-bar">
-                  <h4 class="title-bar">Проект LAB</h4>
+                  <h4 class="subtitle-bar">Проект LAB</h4>
                   <p class="description-bar">Маркетинг</p>
                 </div>
               </a>
@@ -285,7 +285,7 @@
                   </div>
                 </div>
                 <div class="site-bar">
-                  <h4 class="title-bar">Growing Business</h4>
+                  <h4 class="subtitle-bar">Growing Business</h4>
                   <p class="description-bar">Приложение</p>
                 </div>
               </a>
