--- a/index.html
+++ b/index.html
@@ -25,6 +25,22 @@
         <p lang="en" class="Webstudio">
           <span class="web">Web</span><span class="studio">Studio</span>
         </p>
+        <button type="button" class="menu-button is-open" data-menu-button>
+          <svg
+            width="20"
+            height="16"
+            aria-label="переключатель мобильного меню"
+          >
+            <use
+              class="icon-cross"
+              href="./img/sprite/icons.svg#icon-x-1"
+            ></use>
+            <use
+              class="icon-menu"
+              href="./img/sprite/icons.svg#burger-menu"
+            ></use>
+          </svg>
+        </button>
         <nav>
           <ul class="list">
             <li class="item">
@@ -578,5 +594,6 @@
     </div>
     <!--/Модалка-->
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
