burger & cross button

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           >
             <use
               class="icon-cross"
-              href="./img/sprite/icons.svg#icon-x-1"
+              href="./img/sprite/icons.svg#icon-cross"
             ></use>
             <use
               class="icon-menu"
