--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <p lang="en" class="Webstudio">
           <span class="web">Web</span><span class="studio">Studio</span>
         </p>
-        <button type="button" class="menu-button is-open" data-menu-button>
+        <button type="button" class="menu-button" data-menu-button>
           <svg
             width="40"
             height="40"
@@ -41,35 +41,45 @@
             ></use>
           </svg>
         </button>
-        <nav>
-          <ul class="list">
-            <li class="item">
-              <a href="#" class="list-links current line">Студия</a>
-            </li>
-            <li class="item">
-              <a href="./portfolio.html" class="list-links">Портфолио</a>
-            </li>
-            <li class="item">
-              <a href="#" class="list-links">Контакты</a>
-            </li>
-          </ul>
-        </nav>
-        <address class="address">
-          <div class="nav-contact">
-            <a href="mailto:info@devstudio.com" class="adress-color">
-              <svg class="icon-contacts" width="16" height="12">
-                <use href="./img/sprite/sprite.svg#icon-envelope"></use>
-              </svg>
-              info@devstudio.com</a
-            >
-            <a href="tel:+380961111111" class="adress-color">
-              <svg class="icon-contacts" width="10" height="16">
-                <use href="./img/sprite/sprite.svg#icon-smartphone"></use>
-              </svg>
-              +38 096 111 11 11</a
-            >
-          </div>
-        </address>
+        <div class="menu-container" data-menu>
+          <nav>
+            <ul class="list">
+              <li class="item">
+                <a href="#" class="list-links current line">Студия</a>
+              </li>
+              <li class="item">
+                <a href="./portfolio.html" class="list-links">Портфолио</a>
+              </li>
+              <li class="item">
+                <a href="#" class="list-links">Контакты</a>
+              </li>
+            </ul>
+          </nav>
+          <address class="address">
+            <div class="nav-contact">
+              <a href="mailto:info@devstudio.com" class="adress-color mail">
+                <svg class="icon-contacts" width="16" height="12">
+                  <use href="./img/sprite/sprite.svg#icon-envelope"></use>
+                </svg>
+                info@devstudio.com</a
+              >
+              <a href="tel:+380961111111" class="adress-color phone">
+                <svg class="icon-contacts" width="10" height="16">
+                  <use href="./img/sprite/sprite.svg#icon-smartphone"></use>
+                </svg>
+                +38 096 111 11 11</a
+              >
+            </div>
+            <div class="nav-social">
+              <ul class="nav-icons">
+                <li class="socials-size">Instagram</li>
+                <li class="socials-size">Twitter</li>
+                <li class="socials-size">Facebook</li>
+                <li class="socials-size">LinkedIn</li>
+              </ul>
+            </div>
+          </address>
+        </div>
       </div>
     </header>
     <!-- /Шапка сайта -->
