header menu done

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <body>
     <!-- Шапка сайта -->
-    <header>
+    <header class="header-position">
       <div class="container inline-item">
         <p lang="en" class="Webstudio">
           <span class="web">Web</span><span class="studio">Studio</span>
