--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <!-- Шапка сайта -->
-    <header class="border-line">
+    <header class="border-line header-position">
       <div class="container inline-item">
         <p lang="en" class="Webstudio">
           <span class="web">Web</span><span class="studio">Studio</span>
@@ -44,10 +44,12 @@
           <nav>
             <ul class="list">
               <li class="item">
-                <a href="#" class="list-links current line">Студия</a>
+                <a href="./index.html" class="list-links current line"
+                  >Студия</a
+                >
               </li>
               <li class="item">
-                <a href="./portfolio.html" class="list-links">Портфолио</a>
+                <a href="#" class="list-links">Портфолио</a>
               </li>
               <li class="item">
                 <a href="#" class="list-links">Контакты</a>
@@ -56,18 +58,26 @@
           </nav>
           <address class="address">
             <div class="nav-contact">
-              <a href="mailto:info@devstudio.com" class="adress-color">
+              <a href="mailto:info@devstudio.com" class="adress-color mail">
                 <svg class="icon-contacts" width="16" height="12">
                   <use href="./img/sprite/sprite.svg#icon-envelope"></use>
                 </svg>
                 info@devstudio.com</a
               >
-              <a href="tel:+380961111111" class="adress-color">
+              <a href="tel:+380961111111" class="adress-color phone">
                 <svg class="icon-contacts" width="10" height="16">
                   <use href="./img/sprite/sprite.svg#icon-smartphone"></use>
                 </svg>
                 +38 096 111 11 11</a
               >
+            </div>
+            <div class="nav-social">
+              <ul class="nav-icons">
+                <li class="socials-size">Instagram</li>
+                <li class="socials-size">Twitter</li>
+                <li class="socials-size">Facebook</li>
+                <li class="socials-size">LinkedIn</li>
+              </ul>
             </div>
           </address>
         </div>
@@ -390,5 +400,6 @@
       </section>
     </footer>
     <!-- Контакты -->
+    <script src="./js/menu.js"></script>
   </body>
 </html>
