header tablet ready

--- a/portfolio.html
+++ b/portfolio.html
@@ -44,12 +44,10 @@
           <nav>
             <ul class="list">
               <li class="item">
-                <a href="./index.html" class="list-links current line"
-                  >Студия</a
-                >
+                <a href="./index.html" class="list-links">Студия</a>
               </li>
               <li class="item">
-                <a href="#" class="list-links">Портфолио</a>
+                <a href="#" class="list-links current line">Портфолио</a>
               </li>
               <li class="item">
                 <a href="#" class="list-links">Контакты</a>
