clients is ready

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       <section class="title-bar">
         <div class="container">
           <h3 class="titles">Чем мы занимаемся</h3>
-          <ul class="images">
+          <ul class="image-bar">
             <li class="list-images">
               <img
                 class="photo"
