--- a/portfolio.html
+++ b/portfolio.html
@@ -114,8 +114,13 @@
                 <div class="thumb">
                   <img
                     class="photo"
+                    srcset="
+                      ./img/portfolio/img1-portfolio1x.jpg 320w,
+                      ./img/portfolio/img1-portfolio2x.jpg 640w
+                    "
                     src="./img/portfolio/img1-portfolio1x.jpg"
                     alt="веб страница"
+                    sizes="(min-width: 1200px) 33vw, (min-width: 768px) 50vw, 100vw"
                   />
                   <div class="product-overlay">
                     <p class="thumb-text">
@@ -137,8 +142,13 @@
                 <div class="thumb">
                   <img
                     class="photo"
+                    srcset="
+                      ./img/portfolio/img2-portfolio1x.jpg 320w,
+                      ./img/portfolio/img2-portfolio2x.jpg 640w
+                    "
                     src="./img/portfolio/img2-portfolio1x.jpg"
                     alt="игра в баскетбол"
+                    sizes="(min-width: 1200px) 33vw, (min-width: 768px) 50vw, 100vw"
                   />
                   <div class="product-overlay">
                     <p class="thumb-text">
@@ -160,8 +170,13 @@
                 <div class="thumb">
                   <img
                     class="photo"
+                    srcset="
+                      ./img/portfolio/img3-portfolio1x.jpg 320w,
+                      ./img/portfolio/img3-portfolio2x.jpg 640w
+                    "
                     src="./img/portfolio/img3-portfolio1x.jpg"
                     alt="ресторан морепродуктов"
+                    sizes="(min-width: 1200px) 33vw, (min-width: 768px) 50vw, 100vw"
                   />
                   <div class="product-overlay">
                     <p class="thumb-text">
@@ -183,8 +198,13 @@
                 <div class="thumb">
                   <img
                     class="photo"
+                    srcset="
+                      ./img/portfolio/img4-portfolio1x.jpg 320w,
+                      ./img/portfolio/img4-portfolio2x.jpg 640w
+                    "
                     src="img/portfolio/img4-portfolio1x.jpg"
                     alt="наушники"
+                    sizes="(min-width: 1200px) 33vw, (min-width: 768px) 50vw, 100vw"
                   />
                   <div class="product-overlay">
                     <p class="thumb-text">
@@ -206,8 +226,13 @@
                 <div class="thumb">
                   <img
                     class="photo"
+                    srcset="
+                      ./img/portfolio/img5-portfolio1x.jpg 320w,
+                      ./img/portfolio/img5-portfolio2x.jpg 640w
+                    "
                     src="./img/portfolio/img5-portfolio1x.jpg"
                     alt="коробки"
+                    sizes="(min-width: 1200px) 33vw, (min-width: 768px) 50vw, 100vw"
                   />
                   <div class="product-overlay">
                     <p class="thumb-text">
@@ -229,8 +254,13 @@
                 <div class="thumb">
                   <img
                     class="photo"
+                    srcset="
+                      ./img/portfolio/img6-portfolio1x.jpg 320w,
+                      ./img/portfolio/img6-portfolio2x.jpg 640w
+                    "
                     src="./img/portfolio/img6-portfolio1x.jpg"
                     alt="компьютер"
+                    sizes="(min-width: 1200px) 33vw, (min-width: 768px) 50vw, 100vw"
                   />
                   <div class="product-overlay">
                     <p class="thumb-text">
@@ -252,8 +282,13 @@
                 <div class="thumb">
                   <img
                     class="photo"
+                    srcset="
+                      ./img/portfolio/img7-portfolio1x.jpg 320w,
+                      ./img/portfolio/img7-portfolio2x.jpg 640w
+                    "
                     src="./img/portfolio/img7-portfolio1x.jpg"
                     alt="журнал"
+                    sizes="(min-width: 1200px) 33vw, (min-width: 768px) 50vw, 100vw"
                   />
                   <div class="product-overlay">
                     <p class="thumb-text">
@@ -275,8 +310,13 @@
                 <div class="thumb">
                   <img
                     class="photo"
+                    srcset="
+                      ./img/portfolio/img8-portfolio1x.jpg 320w,
+                      ./img/portfolio/img8-portfolio2x.jpg 640w
+                    "
                     src="./img/portfolio/img8-portfolio1x.jpg"
                     alt="проект"
+                    sizes="(min-width: 1200px) 33vw, (min-width: 768px) 50vw, 100vw"
                   />
                   <div class="product-overlay">
                     <p class="thumb-text">
@@ -298,8 +338,13 @@
                 <div class="thumb">
                   <img
                     class="photo"
+                    srcset="
+                      ./img/portfolio/img9-portfolio1x.jpg 320w,
+                      ./img/portfolio/img9-portfolio2x.jpg 640w
+                    "
                     src="./img/portfolio/img9-portfolio1x.jpg"
                     alt="работа на компьютере"
+                    sizes="(min-width: 1200px) 33vw, (min-width: 768px) 50vw, 100vw"
                   />
                   <div class="product-overlay">
                     <p class="thumb-text">
