--- a/index.html
+++ b/index.html
@@ -154,6 +154,10 @@
             <li class="list-images">
               <img
                 class="photo"
+                srcset="
+                  ./img/activity/activity1-img1x.jpg 1x,
+                  ./img/activity/activity1-img2x.jpg 2x
+                "
                 src="./img/activity/activity1-img1x.jpg"
                 alt="верстка сайта"
                 width="370"
@@ -164,6 +168,10 @@
             <li class="list-images">
               <img
                 class="photo"
+                srcset="
+                  ./img/activity/activity2-img1x.jpg 1x,
+                  ./img/activity/activity2-img2x.jpg 2x
+                "
                 src="./img/activity/activity2-img1x.jpg"
                 alt="дизайн приложения на мобильном устройстве"
                 width="370"
@@ -174,6 +182,10 @@
             <li class="list-images">
               <img
                 class="photo"
+                srcset="
+                  ./img/activity/activity3-img1x.jpg 1x,
+                  ./img/activity/activity3-img2x.jpg 2x
+                "
                 src="./img/activity/activity3-img1x.jpg"
                 alt="тестирование приложения"
                 width="370"
@@ -194,6 +206,10 @@
             <li class="team-photo">
               <img
                 class="photo"
+                srcset="
+                  ./img/team/team1-img1x.jpg 1x,
+                  ./img/team/team1-img2x.jpg 2x
+                "
                 src="./img/team/team1-img1x.jpg"
                 alt="Игорь Демьяненко"
                 width="270"
@@ -245,6 +261,10 @@
             <li class="team-photo">
               <img
                 class="photo"
+                srcset="
+                  ./img/team/team2-img1x.jpg 1x,
+                  ./img/team/team2-img2x.jpg 2x
+                "
                 src="./img/team/team2-img1x.jpg"
                 alt="Ольга Репина"
                 width="270"
@@ -296,6 +316,10 @@
             <li class="team-photo">
               <img
                 class="photo"
+                srcset="
+                  ./img/team/team3-img1x.jpg 1x,
+                  ./img/team/team3-img2x.jpg 2x
+                "
                 src="./img/team/team3-img1x.jpg"
                 alt="Николай Тарасов"
                 width="270"
@@ -347,6 +371,10 @@
             <li class="team-photo">
               <img
                 class="photo"
+                srcset="
+                  ./img/team/team4-img1x.jpg 1x,
+                  ./img/team/team4-img2x.jpg 2x
+                "
                 src="./img/team/team4-img1x.jpg"
                 alt="Михаил Ермаков"
                 width="270"
