--- a/portfolio.html
+++ b/portfolio.html
@@ -115,12 +115,13 @@
                   <img
                     class="photo"
                     srcset="
-                      ./img/portfolio/img1-portfolio1x.jpg 320w,
-                      ./img/portfolio/img1-portfolio2x.jpg 640w
+                      ./img/portfolio/img1-portfolio1x.jpg 1x,
+                      ./img/portfolio/img1-portfolio2x.jpg 2x
                     "
                     src="./img/portfolio/img1-portfolio1x.jpg"
                     alt="веб страница"
-                    sizes="(min-width: 1200px) 33vw, (min-width: 768px) 50vw, 100vw"
+                    width="370"
+                    height="294"
                   />
                   <div class="product-overlay">
                     <p class="thumb-text">
@@ -143,12 +144,13 @@
                   <img
                     class="photo"
                     srcset="
-                      ./img/portfolio/img2-portfolio1x.jpg 320w,
-                      ./img/portfolio/img2-portfolio2x.jpg 640w
+                      ./img/portfolio/img2-portfolio1x.jpg 1x,
+                      ./img/portfolio/img2-portfolio2x.jpg 2x
                     "
                     src="./img/portfolio/img2-portfolio1x.jpg"
                     alt="игра в баскетбол"
-                    sizes="(min-width: 1200px) 33vw, (min-width: 768px) 50vw, 100vw"
+                    width="370"
+                    height="294"
                   />
                   <div class="product-overlay">
                     <p class="thumb-text">
@@ -171,12 +173,13 @@
                   <img
                     class="photo"
                     srcset="
-                      ./img/portfolio/img3-portfolio1x.jpg 320w,
-                      ./img/portfolio/img3-portfolio2x.jpg 640w
+                      ./img/portfolio/img3-portfolio1x.jpg 1x,
+                      ./img/portfolio/img3-portfolio2x.jpg 2x
                     "
                     src="./img/portfolio/img3-portfolio1x.jpg"
                     alt="ресторан морепродуктов"
-                    sizes="(min-width: 1200px) 33vw, (min-width: 768px) 50vw, 100vw"
+                    width="370"
+                    height="294"
                   />
                   <div class="product-overlay">
                     <p class="thumb-text">
@@ -199,12 +202,13 @@
                   <img
                     class="photo"
                     srcset="
-                      ./img/portfolio/img4-portfolio1x.jpg 320w,
-                      ./img/portfolio/img4-portfolio2x.jpg 640w
+                      ./img/portfolio/img4-portfolio1x.jpg 1x,
+                      ./img/portfolio/img4-portfolio2x.jpg 2x
                     "
                     src="img/portfolio/img4-portfolio1x.jpg"
                     alt="наушники"
-                    sizes="(min-width: 1200px) 33vw, (min-width: 768px) 50vw, 100vw"
+                    width="370"
+                    height="294"
                   />
                   <div class="product-overlay">
                     <p class="thumb-text">
@@ -227,12 +231,13 @@
                   <img
                     class="photo"
                     srcset="
-                      ./img/portfolio/img5-portfolio1x.jpg 320w,
-                      ./img/portfolio/img5-portfolio2x.jpg 640w
+                      ./img/portfolio/img5-portfolio1x.jpg 1x,
+                      ./img/portfolio/img5-portfolio2x.jpg 2x
                     "
                     src="./img/portfolio/img5-portfolio1x.jpg"
                     alt="коробки"
-                    sizes="(min-width: 1200px) 33vw, (min-width: 768px) 50vw, 100vw"
+                    width="370"
+                    height="294"
                   />
                   <div class="product-overlay">
                     <p class="thumb-text">
@@ -255,12 +260,13 @@
                   <img
                     class="photo"
                     srcset="
-                      ./img/portfolio/img6-portfolio1x.jpg 320w,
-                      ./img/portfolio/img6-portfolio2x.jpg 640w
+                      ./img/portfolio/img6-portfolio1x.jpg 1x,
+                      ./img/portfolio/img6-portfolio2x.jpg 2x
                     "
                     src="./img/portfolio/img6-portfolio1x.jpg"
                     alt="компьютер"
-                    sizes="(min-width: 1200px) 33vw, (min-width: 768px) 50vw, 100vw"
+                    width="370"
+                    height="294"
                   />
                   <div class="product-overlay">
                     <p class="thumb-text">
@@ -283,12 +289,13 @@
                   <img
                     class="photo"
                     srcset="
-                      ./img/portfolio/img7-portfolio1x.jpg 320w,
-                      ./img/portfolio/img7-portfolio2x.jpg 640w
+                      ./img/portfolio/img7-portfolio1x.jpg 1x,
+                      ./img/portfolio/img7-portfolio2x.jpg 2x
                     "
                     src="./img/portfolio/img7-portfolio1x.jpg"
                     alt="журнал"
-                    sizes="(min-width: 1200px) 33vw, (min-width: 768px) 50vw, 100vw"
+                    width="370"
+                    height="294"
                   />
                   <div class="product-overlay">
                     <p class="thumb-text">
@@ -311,12 +318,13 @@
                   <img
                     class="photo"
                     srcset="
-                      ./img/portfolio/img8-portfolio1x.jpg 320w,
-                      ./img/portfolio/img8-portfolio2x.jpg 640w
+                      ./img/portfolio/img8-portfolio1x.jpg 1x,
+                      ./img/portfolio/img8-portfolio2x.jpg 2x
                     "
                     src="./img/portfolio/img8-portfolio1x.jpg"
                     alt="проект"
-                    sizes="(min-width: 1200px) 33vw, (min-width: 768px) 50vw, 100vw"
+                    width="370"
+                    height="294"
                   />
                   <div class="product-overlay">
                     <p class="thumb-text">
@@ -339,12 +347,13 @@
                   <img
                     class="photo"
                     srcset="
-                      ./img/portfolio/img9-portfolio1x.jpg 320w,
-                      ./img/portfolio/img9-portfolio2x.jpg 640w
+                      ./img/portfolio/img9-portfolio1x.jpg 1x,
+                      ./img/portfolio/img9-portfolio2x.jpg 2x
                     "
                     src="./img/portfolio/img9-portfolio1x.jpg"
                     alt="работа на компьютере"
-                    sizes="(min-width: 1200px) 33vw, (min-width: 768px) 50vw, 100vw"
+                    width="370"
+                    height="294"
                   />
                   <div class="product-overlay">
                     <p class="thumb-text">
