--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
       <!-- Картинки - описание деятельности-->
       <section class="title-bar">
-        <div class="container">
+        <div class="container image-container">
           <h3 class="titles">Чем мы занимаемся</h3>
           <ul class="image-bar">
             <li class="list-images">
